--- a/index.html
+++ b/index.html
@@ -80,10 +80,11 @@ Quiero hacerte el daily reminder amor mío. Pero sobre todo porque vi varias cos
     // Recorre cada flor y le asigna un alert
     emojis.forEach((emoji, index) => {
       emoji.addEventListener('click', () => {
-        alert('Hiciste clic en la flor número ' + (index + 1) + ' 🌸');
+        alert('amor, eres tan bonita como las flores, y eres más linda. Recuerda que las lilis son hermosas amor pero deben abrir, así debe ser tu amor, debes ver tu belleza para abrir amor mio, TE AMO MUCHISIMO CON TODA MI ALMA💗💗💗💗💗 ' + (index + 1) + ' 🌸');
       });
     });
   </script>
 
 </body>
+
 </html>
